Changes on version 1.0.14 (current):
- Add tests XCode project.

Changes on version 1.0.12:
- Number compare fix.

Changes on version 1.0.7:
- Thread safe C++ implementation.

Changes on version 1.0.5:
- Static initialisers.
- ARC support.

Changes on version 1.0.3:
- String value getter.

Changes on version 1.0.2:
- mutableCopy implementation.

Changes on version 1.0.0:
- Initial logic based on NSNumber.