@@ -1,10 +1,4 @@
-//
-//  ViewController.m
-//  MN
-//
-//  Created by Resident evil on 11/11/15.
-//  Copyright © 2015 Oleh Kulykov. All rights reserved.
-//
+
 
 #import "ViewController.h"
 
